--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,11 +1,1 @@
-<% content_for :title, "New pet" %>
-
-<h1>New pet</h1>
-
-<%= render "form", pet: @pet %>
-
-<br>
-
-<div>
-  <%= link_to "Back to pets", pets_path %>
-</div>
+<div id="pet-new-root" class="container mx-auto px-4 py-8"></div>
