--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,10 +1,1 @@
-<p style="color: green"><%= notice %></p>
-
-<%= render @pet %>
-
-<div>
-  <%= link_to "Edit this pet", edit_pet_path(@pet) %> |
-  <%= link_to "Back to pets", pets_path %>
-
-  <%= button_to "Destroy this pet", @pet, method: :delete %>
-</div>
+<div id="pet-show-root" data-pet-id="<%= @pet.id %>" class="container mx-auto px-4 py-8"></div>
