--- a/app/views/injuries/new.html.erb
+++ b/app/views/injuries/new.html.erb
@@ -1,11 +1,1 @@
-<% content_for :title, "New injury" %>
-
-<h1>New injury</h1>
-
-<%= render "form", injury: @injury %>
-
-<br>
-
-<div>
-  <%= link_to "Back to injuries", injuries_path %>
-</div>
+<div id="injury_form" data-mode="new" class="container mx-auto px-4 py-8"></div>
