--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,12 @@
   </head>
 
   <body>
+    <% if notice.present? %>
+      <p class="notice" style="color: green"><%= notice %></p>
+    <% end %>
+    <% if alert.present? %>
+      <p class="alert" style="color: red"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
