--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,1 +1,1 @@
-<div id="pets-index-root" class="container mx-auto px-4 py-8"></div>
+<div id="pets-index-root" class="container mx-auto px-4 py-8" data-pets="<%= @pets.to_json %>"></div>
